--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230413092650">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230413144721">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,17 +34,17 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__attribution attribution">
-				Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-				Coded by <a target="_blank" href="https://www.frontendmentor.io/profile/Shadow-IO-oI">Shadow</a>.
-			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
+				<div class="footer__attribution attribution">
+					Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+					Coded by <a href="https://www.frontendmentor.io/profile/Shadow-IO-oI">Shadow</a>.
+				</div>
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230413092650"></script>
+	<script src="js/app.min.js?_v=20230413144721"></script>
 </body>
 
 </html>
